# resume_builder_backend

./: .gitignore  example.py  linkedin_job_description_scrapper.py  linkedin_jobs.json  main.py  pyproject.toml  requirements.txt
app/: ai_resume_builder.py  config.py  job_search_agent.py  models.py
app/database/: resume.sqlite
app/db/: company_repository.py  compare_schemas.py  database.py  init_db.py  job_repository.py  repository.py
database/: resume.frontend.sqlite  resume.sqlite
input/: job_descriptions.json  job_descriptions_20250525_130728.json
test_data/: background.txt  job_description.txt  job_search_preferences.txt  sample_jobs.json
