[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Rakshit Makan <rakshitmakan.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
pydantic = "^2.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
